# contour_matching

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs
src/: lib.rs  main.rs
src/api/: app.rs  encode.rs  mod.rs  state.rs
src/cffi/: encoder.rs  image.rs  mod.rs
src/cpp/: CMakeLists.txt
src/cpp/cmake/: dependencies.cmake  helper.cmake  options.cmake
src/cpp/include/: cm.hpp
src/cpp/include/cm/: encoder.hpp  wrapper.hpp
src/cpp/include/cm/common/: cmake.h.in  const.h  defines.h  error.h
src/cpp/include/cm/encoder/: fourier.impl.hpp
src/cpp/lib/: CMakeLists.txt  lib.cpp
